--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,13 @@
     display: none;
   }
 }
+
+@layer utilities {
+  .nav::after {
+    @apply content-[''] bg-pink-500 h-[3px] w-[0%] left-0 -bottom-[5px] rounded-xl absolute duration-300
+  }
+
+  .nav:hover::after {
+    @apply w-[100%]
+  }
+}
