--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,26 @@
   }
 }
 
+@media only screen and (max-width: 300px) {
+  .small-screen {
+    display: none;
+  }
+
+  .gap-small {
+    gap: 10px;
+  }
+
+  .resume-icon-show {
+    display: block
+  }
+}
+
+@media only screen and (min-width: 300px) {
+  .resume-icon-hide {
+    display: none
+  }
+}
+
 @layer utilities {
   .nav::after {
     @apply content-[''] bg-pink-500 h-[3px] w-[0%] left-0 -bottom-[5px] rounded-xl absolute duration-300
