--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  ul, ol {
+  ul,
+  ol {
     list-style: revert;
   }
 }
@@ -34,22 +35,51 @@
   }
 
   .resume-icon-show {
-    display: block
+    display: block;
   }
 }
 
 @media only screen and (min-width: 300px) {
   .resume-icon-hide {
-    display: none
+    display: none;
   }
 }
 
 @layer utilities {
   .nav::after {
-    @apply content-[''] bg-pink-500 h-[3px] w-[0%] left-0 -bottom-[5px] rounded-xl absolute duration-300
+    @apply content-[''] bg-pink-500 h-[3px] w-[0%] left-0 -bottom-[5px] rounded-xl absolute duration-300;
   }
 
   .nav:hover::after {
-    @apply w-[100%]
+    @apply w-[100%];
+  }
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background-color: black;
+  top: 0;
+  left: 44.5%;
+  margin-left: 9.8%;
+  z-index: -1;
+  animation: moveline 8s linear forwards;
+}
+
+@media only screen and (max-width: 640px) {
+  .timeline::after {
+    top: 2%;
+    left: 0;
+  }
+}
+
+@keyframes moveline {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
   }
 }
