--- a/app/globals.css
+++ b/app/globals.css
@@ -68,10 +68,62 @@
   animation: moveline 8s linear forwards;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 540px) {
   .timeline::after {
     top: 2%;
     left: 0;
+  }
+
+  .left-container {
+    left: 5.25%
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  .left-container {
+    right: -36%
+  }
+}
+
+@media only screen and (min-width: 741px) {
+  .left-container {
+    right: -22.75%
+  }
+}
+
+@media only screen and (min-width: 844px) {
+  .left-container {
+    right: -21.5%
+  }
+}
+
+@media only screen and (min-width: 896px) {
+  .left-container {
+    right: -20.5%
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .left-container {
+    right: -29.5%
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .left-container {
+    left: 85.75%
+  }
+}
+
+@media only screen and (min-width: 1360px) {
+  .left-container {
+    left: 100.5%
+  }
+}
+
+@media only screen and (min-width: 1536px) {
+  .left-container {
+    left: 81.75%
   }
 }
 
