--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
     position: absolute;
     width: 6px;
     height: 100%;
-    background-color: black;
+    background-color: lightGray;
     top: 0;
     left: 44.6%;
     margin-left: 9.8%;
